# pyopenaigptcli

./: README.md  pyproject.toml
gptcli/commands/gpt/: main.py
gptcli/json/: gpt.py
pyopenaigptcli/: gpt.py
pyopenaigptcli/commands/gpt/: main.py
pyopenaigptcli/commands/gpt/arguments/: parse.py
pyopenaigptcli/json/: __init__.py  gpt.py
