[tool.poetry]
name = "pyopenaigptcli"
version = "0.4.0"
description = "Easy to use GPT command line interface"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gpt = "pyopenaigptcli.commands.gpt.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pyopenaichat = {git = "https://github.com/ivandustin/pyopenaichat.git"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
